Mon May 23 07:55:41 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tests/QtReactor_Test.h:
        * tests/QtReactor_Test.cpp:
        Changed deprecated qt4 functions and includes.

Mon May 23 07:10:41 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Naming/Name_Binding.h:
        * netsvcs/lib/Client_Logging_Handler.cpp:
          Fixed incorrect delete

Mon May 23 06:55:37 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Streams/MessageInfo.h:
          Pass argument as const& to fix Coverity error

        * protocols/ace/INet/BidirStreamBuffer.h:
        * protocols/ace/INet/BufferedStreamBuffer.h:
        * protocols/ace/INet/HTTP_BasicAuthentication.cpp:
        * protocols/ace/RMCast/Link.cpp:
          Fixed memory leaks, thanks to Max Zhou <earthdog at 126 dot com>
          for creating the patch, this fixes bugzilla 3959

Fri May 20 22:17:29 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/config/ace_qt4reactor.mpb:

          Assignment to "after" must match the target MPC project name.

Thu May 12 18:08:47 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/wrapper_macros.GNU: Added command settings for
          preprocessing C and C++ source files.

        * include/makeinclude/rules.local.GNU: Added rules to preprocess
          C and C++ files when directed.

          These allow one to now quickly produce a preprocessed version of
          a source file. Ala... make -f GNUmakefile.ACE ACE.i
          would preprocess ACE.cpp and put the result in ACE.i.

Thu May 12 01:04:19 UTC 2011   Chad Beaulac  <chad.beaulac@objectivesolutions.com>
        * tests/Bug_3912_Regression_Test.cpp:
          Integrated changes from Phil Mesnier.
          Added static_cast and const_cast instead of C-style casts.

Wed May 11 18:26:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Thread_Control.h: